# telegram-stream-app

./: .dockerignore  .gitignore  .replit  Dockerfile  MANIFEST.in  Procfile  README.md  app.json  app.py  docker-compose.yml  requirements.txt  run.py  setup.cfg
.fleet/: run.json  settings.json
.github/: FUNDING.yml
misc/: bs4_methods.py  crypt.py  data_convert.py  proxy.py  regex.py
modules/: __init__.py  errors.py  index.py  middleware.py  proxy.py  routes.py
splash/: page.html  style.css
static/css/: error.css  font-roboto.css  style.css  telegram-web.css  widget-frame.css
static/js/: jquery-ui.min.js  jquery.min.js  telegram-web.js  tgsticker-worker.js  tgsticker.js  widget-frame.js
templates/: error.html  nothing.html  welcome.html
