[metadata]
name = luga
version = attr: app.__version__
url = https://github.com/koval01/luga
description = Web application for viewing Lugansky blogger`s news
long_description = file: README.md
long_description_content_type = text/markdown
keywords = news, telegram, python, application
author = Yaroslav Koval
author_email = yaroslav@koval.page
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires=
    Flask
    Flask-Minify
    Flask-Limiter
    Flask-Log-Request-ID
    gunicorn
    requests
    validators
    beautifulsoup4
    lxml
    sentry-sdk
    werkzeug

[options.extras_require]
test =
    pytest
    python-dateutil
dev = pycodestyle

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    whoogle-search-kdev = app:app